--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
         <div class="main">
         <div class="header">
             <button>+ Новая заявка</button>
+            <div class="right_header">
             <div class="date">23.05.2024</div>
             <div class="name_photo">
                 <div class="name">Иванов И.</div>
                 <div class="photo">фото</div>
             </div>
+        </div>
         </div>
         
         <table class="table">
