--- a/zaiv_isp.html
+++ b/zaiv_isp.html
@@ -13,6 +13,7 @@
             <div class="Naiming">Servec desk</div>
             <div class="menu">
                 <div class="button_menu">Заявки</div>
+                <div class="button_menu">Склад</div>
                 <div class="button_menu">Документы</div>
                 <div class="button_menu">Личный кабинет</div>
             </div>
