--- a/zaiv_nach.html
+++ b/zaiv_nach.html
@@ -14,6 +14,9 @@
             <div class="menu">
                 <div class="button_menu">Заявки</div>
                 <div class="button_menu">Документы</div>
+                <div class="button_menu">Склад</div>
+                <div class="button_menu">Аналитика</div>
+                <div class="button_menu">Сотрудники</div>
                 <div class="button_menu">Личный кабинет</div>
             </div>
         </div>
