--- a/zaiv_isp.html
+++ b/zaiv_isp.html
@@ -35,15 +35,17 @@
             <thead>
               <tr>
                 <th>№ заявки</th>
-                <th>Оборуование</th>
-                <th>Заголовок 2</th>
-                <th>Заголовок 2</th>
-                <th>Заголовок 2</th>
+                <th>Оборудование</th>
+                <th>Исполнитель</th>
+                <th>Заявитель</th>
                 <th>Дата создания</th>
+                <th>Дата завершения</th>
+                <th>Статус</th>
               </tr>
             </thead>
             <tbody>
                 <tr>
+                  <td>Ячейка 1,1</td>
                   <td>Ячейка 1,1</td>
                   <td>Ячейка 1,1</td>
                   <td>Ячейка 1,1</td>
